<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/colorPrimaryDark"
	android:paddingStart="16dp"
	android:paddingEnd="16dp"
	android:visibility="visible"
	app:layout_behavior="@string/appbar_scrolling_view_behavior">

	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/appBarLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/AppTheme.AppBarOverlay"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<ImageView
			android:id="@+id/imageView2"
			android:layout_width="wrap_content"
			android:layout_height="100dp"
			android:scaleType="centerInside"
			app:srcCompat="@drawable/gads" />
	</com.google.android.material.appbar.AppBarLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/text_input_first_name"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="64dp"
		android:layout_marginEnd="8dp"
		android:background="@color/colorAccent"
		android:paddingTop="8dp"
		android:textColorHint="@color/colorPrimaryDark"
		app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
		app:hintTextColor="@color/colorButton"
		app:layout_constraintEnd_toStartOf="@+id/guideline3"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/image_gradient_line">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/first_name_value"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@android:color/transparent"
			android:hint="@string/first_name"
			android:padding="8dp"
			android:textAppearance="@style/TextAppearance.AppCompat.Small" />
	</com.google.android.material.textfield.TextInputLayout>

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_percent="0.5" />

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/text_input_last_name"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="64dp"
		android:background="@color/colorAccent"
		android:paddingTop="8dp"
		android:textColorHint="@color/colorPrimaryDark"
		app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
		app:hintTextColor="@color/colorButton"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="@+id/guideline3"
		app:layout_constraintTop_toBottomOf="@+id/image_gradient_line">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/last_name_value"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@android:color/transparent"
			android:hint="@string/last_name"
			android:padding="8dp"
			android:textAppearance="@style/TextAppearance.AppCompat.Small" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/text_input_email"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="64dp"
		android:background="@color/colorAccent"
		android:paddingTop="8dp"
		android:textColorHint="@color/colorPrimaryDark"
		app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
		app:hintTextColor="@color/colorButton"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/text_input_first_name">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/email_value"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@android:color/transparent"
			android:hint="@string/email_address"
			android:padding="8dp"
			android:textAppearance="@style/TextAppearance.AppCompat.Small" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/text_input_link"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="64dp"
		android:background="@color/colorAccent"
		android:paddingTop="8dp"
		android:textColorHint="@color/colorPrimaryDark"
		app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
		app:hintTextColor="@color/colorButton"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/text_input_email">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/github_link_value"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@android:color/transparent"
			android:hint="@string/github_link"
			android:padding="8dp"
			android:textAppearance="@style/TextAppearance.AppCompat.Small" />
	</com.google.android.material.textfield.TextInputLayout>

	<Button
		android:id="@+id/button_submit"
		style="@android:style/Widget.DeviceDefault.Button.Borderless"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="64dp"
		android:background="@drawable/rounded_buttons"
		android:paddingLeft="32dp"
		android:paddingRight="32dp"
		android:text="@string/submit"
		android:textAppearance="@style/TextAppearance.AppCompat.Medium"
		android:textColor="@color/colorAccent"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/text_input_link" />

	<TextView
		android:id="@+id/text_title"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:text="@string/title_submission"
		android:textAlignment="center"
		android:textAppearance="@style/TextAppearance.AppCompat.Large"
		android:textColor="@color/colorButton"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

	<ImageView
		android:id="@+id/image_gradient_line"
		android:layout_width="0dp"
		android:layout_height="16dp"
		android:layout_marginTop="4dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.498"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/text_title"
		tools:srcCompat="@drawable/line_seperator" />

</androidx.constraintlayout.widget.ConstraintLayout>
